# solvro_machinelearning

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: github-ci.yml
requirements/: base.txt
src/solvro_machinelearning/cluster/: cocktail_cluster.py  image_ingredients_cluster.py
src/solvro_machinelearning/config/: reducers.py
src/solvro_machinelearning/metrics/: cocktail_cluster_score.py  elbow_metrics.py  ingredients_cluster_score.py
src/solvro_machinelearning/preprocess/: column_one_hot.py  ingredients_features.py  tags_features.py
